feat: add documentation
